# libvbucket

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Makefile.am  NMakefile  README.markdown  annotated.html  classes.html  configure.ac  files.html  functions.html  functions_vars.html  group___c_d.html  group__cfg.html  group__cfgcmp.html  group__err.html  group__vb.html  index.html  libvbucket.pc.in  modules.html  struct_v_b_u_c_k_e_t___c_o_n_f_i_g___d_i_f_f.html  vbucket_8h_source.html
config/: version.pl
docs/: allocation.pod  config.pod  fileformat.pod  libvbucket.pod  misc.pod  vbucket.pod
include/: cJSON.h
include/libvbucket/: vbucket.h  visibility.h
latex/: annotated.tex  doxygen.sty  group___c_d.tex  group__cfg.tex  group__cfgcmp.tex  group__err.tex  group__vb.tex  index.tex  modules.tex  refman.tex  struct_v_b_u_c_k_e_t___c_o_n_f_i_g___d_i_f_f.tex
m4/: couchbase.m4  pandora_have_libhashkit.m4
packaging/deb/: changelog
packaging/debian/: changelog  control  copyright  libvbucket-dev.docs  libvbucket-dev.install  libvbucket1.install  package.mk  rules
packaging/rpm/: libvbucket.spec.in  package.mk
packaging/svr4/: depend  package.mk  pkginfo.libvbucket  pkginfo.libvbucket-dev  prototype.libvbucket  prototype.libvbucket-dev
search/: all_73.html  all_76.html  search.js  variables_6e.html
src/: cJSON.c  hash.h  ketama.c  vbucket.c  vbucketkeygen.c  vbuckettool.c
src/rfc1321/: global.h
tests/: cjson_test.c  macros.h  regression.c  testapp.c  testketama.c
tests/config/: ketama-eight-nodes  ketama-eight-nodes.md5sum  ketama-ordered-eight-nodes  regression-bug2112  testapp-config-couch-api-base  testapp-config-diff2  testapp-config-diff3  testapp-config-flat  testapp-config-in-envelope  testapp-config-in-envelope-fft  testapp-config-in-envelope2  testapp-config-user-password1  testapp-config-user-password2  testapp-config-wrong-num-vbuckets  vbucket-eight-nodes
win32/: config.h  inttypes.h  stdbool.h  strings.h  win_stdint.h
